# finance-control

./: .env  .env.example  README.md  docker-compose.yml  pytest.ini  requirements.txt  test_numeric.py  test_open_worksheet.py
bot/: .env.dev  Dockerfile  api_client.py  bot.py  comands.py  commands.py  config.py  init_bot.py  main.py  pyproject.toml  test_agent.py
bot/agent/: agent.py  config.py  prompts.py  router.py  utils.py
bot/agent/agents/: __init__.py  decision.py  expense_analysis.py  metadata.py  parse.py  response.py  serialization.py  split.py  tools.py  transcription.py
bot/agent/live_test_bot/: __init__.py  ai_router.py  main.py
bot/agent/tests/: test_agent.py
bot/clients/: gateway_client.py
bot/filters/: admin_filter.py  check_amount.py  check_date.py
bot/keyboards/: category.py  confirm.py  delete.py  income_category.py  start_kb.py  today.py  utils.py  wallet.py
bot/middleware/: dependency_injection.py  error_handling.py  logging.py
bot/routers/: ai_router.py  delete_router.py  start_router.py
bot/routers/ai_router/: __init__.py  agent_processor.py  ai_router.py  callback_handler.py  message_handler.py  states.py
bot/routers/expenses/: amount_router.py  category_router.py  comment_router.py  confirm_router.py  date_router.py  delete_router.py  expenses_router.py  state_classes.py  wallet_router.py
bot/routers/income/: amount_router.py  category_router.py  (+6 more)
bot/utils/: logging.py  message_utils.py  voice_messages_utils.py
gateway/: .env.dev  Dockerfile  creds.json  pyproject.toml
gateway/app/: dependencies.py  main.py
(+24 files in other folders)
